# ORC

./: 404.html  Dockerfile  LICENSE  NOTICE  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/workflows/: ci.yml  docs.yml
CONTRIBUTING/: index.html
built-with/: index.html
docs/: CONTRIBUTING.md  built-with.md  index.md
docs/getting-started/: concepts.md  installation.md  quick-start.md
docs/guides/: custom-judges.md  model-showdown.md  strategies.md  use-cases.md
docs/reference/: arena.md  elder.md  judges.md  strategies.md  warrior.md
dynabots_core/: __init__.py
dynabots_core/protocols/: __init__.py  agent.py  judge.py  llm.py  runtime.py  storage.py  swarm.py  tool.py
dynabots_core/providers/: __init__.py  anthropic.py  ollama.py  openai.py
dynabots_core/tools/: __init__.py
dynabots_core/value_objects/: __init__.py  task_result.py
examples/: full_campaign.py  model_showdown.py  quick_battle.py
getting-started/concepts/: index.html
getting-started/installation/: index.html
getting-started/quick-start/: index.html
guides/custom-judges/: index.html
guides/model-showdown/: index.html
guides/strategies/: index.html
guides/use-cases/: index.html
orc/: __init__.py
orc/arena/: __init__.py  arena.py  trial.py
orc/judges/: __init__.py  consensus_judge.py  llm_judge.py  metrics_judge.py
orc/strategies/: __init__.py  always.py  base.py  cooldown.py  reputation.py  specialist.py
orc/themed/: __init__.py  elder.py  the_arena.py  warchief.py  warrior.py
reference/arena/: index.html
search/: search_index.json
tests/: conftest.py  test_arena.py  test_judges.py  test_strategies.py  test_trial.py
(+4 files in other folders)
