[build-system]
requires = ["hatchling<1.27"]
build-backend = "hatchling.build"

[project]
name = "orc-arena"
version = "0.1.0"
description = "Brutalist hierarchy orchestration - AI agents compete for leadership in the Arena"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [
    { name = "Lumi Node" }
]
keywords = [
    "agents",
    "orchestration",
    "multi-agent",
    "competitive",
    "arena",
    "ai",
    "llm"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "dynabots-core>=0.1.0",
]

[project.optional-dependencies]
openai = ["openai>=1.0.0"]
anthropic = ["anthropic>=0.18.0"]
ollama = ["ollama>=0.1.0"]
all = [
    "openai>=1.0.0",
    "anthropic>=0.18.0",
    "ollama>=0.1.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.1.0",
    "build",
]

[project.urls]
Homepage = "https://github.com/Lumi-node/ORC"
Documentation = "https://github.com/Lumi-node/ORC#readme"
Repository = "https://github.com/Lumi-node/ORC"

[tool.hatch.build.targets.wheel]
packages = ["orc"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
